--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { 
-  "homepage ": "http://ismailo.github.io/covid",
+  "homepage ": "http://ismailo.github.io/Covid19Live-France",
   "name": "covid",
   "version": "0.1.0",
   "private": true,
